# living-documentation-editor-poc

./: Cargo.toml  README.adoc  flake.nix
scenarios/: writing_clamp_function_roc.md  writing_clamp_function_roc.yaml  writing_max_clamp_function_roc.md
src/: main.rs
