[package]
name = "living-documentation-editor-poc"
version = "0.1.0"
authors = ["Matthias Devlamynck <matthias.devlamynck@mailoo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "0.3.0"
termion = "1.5.6"
tui-rs = { package = "tui", version = "0.16.0" }
