[package]
name = "living-documentation-editor-poc"
version = "0.1.0"
authors = ["Matthias Devlamynck <matthias.devlamynck@mailoo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combine = "4.6.2"
dissimilar = "1.0.3"
markdown = "0.3.0"
serde = { version = "1.0.131", features = ["derive"] }
serde_yaml = "0.8.21"
termion = "1.5.6"
tui-rs = { package = "tui", version = "0.16.0" }
